--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Regexp::Common::time v0.01
+Regexp::Common::time v0.02
 ==========================
 
 This is a Regexp::Common plugin that provides regular expressions for
@@ -25,24 +25,23 @@ arbitrarily complex custom regexes that can parse just about any time
 or date pattern imaginable.
 
 
-DEVELOPMENT STATE
-
-This is a brand new module.  It has a decent test suite, but it has
-not been extensively field-tested.  So use it with caution.
-
-If you find any bugs, or if any behavior of Regexp::Common::time
-surprises you, I would be grateful if you could send me an email
-message about it.  Thanks.
-
-
 INSTALLATION
 
-To install this module, do the standard Perl module four-step:
+To install this module type the following:
 
-   perl Makefile.PL    or    perl Makefile.pl LIB='my/install/path'
+   perl Build.PL
+   perl Build
+   perl Build test
+   perl Build install
+
+If you do not have Module::Build, you can use the older steps:
+
+   perl Makefile.PL
    make
    make test
    make install
+
+On Windows, you will need to use nmake instead of make.
 
 
 DEPENDENCIES
@@ -58,12 +57,22 @@ Also, Time::Normalize is likely to be useful to you.
 
 COPYRIGHT AND LICENSE
 
-Eric J. Roode, roode@cpan.org
+Copyright (c) 2005-2008 by Eric J. Roode, ROODE I<-at-> cpan I<-dot-> org
 
-Copyright (c) 2005 by Eric J. Roode. All Rights Reserved.
-This module is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+All rights reserved.
 
-To avoid my spam filter, please include "Perl", "module", or this
-module's name in the message's subject line, and/or GPG-sign your
-message.
+This module is copyrighted only to ensure proper attribution of
+authorship and to ensure that it remains available to all.  This
+module is free, open-source software.  This module may be freely used
+for any purpose, commercial, public, or private, provided that proper
+credit is given, and that no more-restrictive license is applied to
+derivative (not dependent) works.
+
+Substantial efforts have been made to ensure that this software meets
+high quality standards; however, no guarantee can be made that there
+are no undiscovered bugs, and no warranty is made as to suitability to
+any given use, including merchantability.  Should this module cause
+your house to burn down, your dog to collapse, your heart-lung machine
+to fail, your spouse to desert you, or George Bush to be re-elected, I
+can offer only my sincere sympathy and apologies, and promise to
+endeavor to improve the software.
