--- a/Changes
+++ b/Changes
@@ -6,3 +6,10 @@ Revision history for Perl extension Regexp::Common::time.
 0.02  23 May 2008
       - Add mail, MAIL, and american formats.
       - Fix many broken test cases.
+
+0.03  25 May 2008
+      - Bug fix: Makefile.PL had a syntax error.
+
+0.04  29 May 2008
+      - Possible fix for Taiwanese locale test failures.
+        Thanks to CPAN tester "imacat".
