Import of SZABGAB/Regexp-Common-time-0.05 from CPAN.
gitpan-cpan-distribution: Regexp-Common-time
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SZABGAB/Regexp-Common-time-0.05.tar.gz
gitpan-cpan-author:       SZABGAB
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -13,3 +13,7 @@ Revision history for Perl extension Regexp::Common::time.
 0.04  29 May 2008
       - Possible fix for Taiwanese locale test failures.
         Thanks to CPAN tester "imacat".
+
+0.05  20 Nov 2013
+      - Fix test RT #87476
+
