--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module Regexp::Common::time.
 
+0.07 2014-09-08
+    - Update tests.
+    - Add use warnings;
+
 0.06 2014-08-26
 
     - Remove Build.PL and keep only Makefile.PL 
